--- a/doc/GoodBye.adoc
+++ b/doc/GoodBye.adoc
@@ -99,7 +99,7 @@
 ** 二叉树(在内存中的数据结构, 顺序数组或者链表)、红黑树、链表的增、删、查流程及算法复杂度
 
 * Interview中的Coding题目
-** [二叉树中最大路径和](https://blog.csdn.net/qq_15764477/article/details/106882100)
+** [.line-through]#[二叉树中最大路径和](https://blog.csdn.net/qq_15764477/article/details/106882100)#
 *** 递归
 *** 考虑子树, 最大路径就4种, root| root+left| root+right| root+left+right
 ** [nlogn时间和常数级空间链表排序](https://www.jianshu.com/p/030a59528323)
@@ -114,19 +114,20 @@
 ** 验证二叉搜索树
 ** 给你两个非空的链表，表示两个非负的整数。它们每位数字都是按照逆序的方式存储的，并且每个节点只能存储一位数字。请你将两个数相加，并以相同形式返回一个表示和的链表
 *** 参考两字符串相加
-** 返回一个树的左视图
+** [.line-through]#返回一个树的左视图#
+*** 二叉树层次遍历, 队列
 ** 给定一个二叉树, 找到该树中两个指定节点的最近公共祖先
 ** 求一个环形链表的环的长度
-** 一个环上有10个点,编号为0-9,从0点出发,每步可以顺时针到下一个点,也可以逆时针到上一个点,求:经过n步又回到0点有多少种不同的走法
+** [.line-through]#一个环上有10个点,编号为0-9,从0点出发,每步可以顺时针到下一个点,也可以逆时针到上一个点,求:经过n步又回到0点有多少种不同的走法#
 *** 环球旅行, 动态规划table(step)(index) = table(step-1)((index+1+n)%n) + table(step-1)((index-1+n)%n)
 ** 找出所有相加之和为 n 的 k 个数的组合，组合中只允许含有 1 - 9 的正整数，并且每种组合中不存在重复的数字
 *** BitMap
 ** 最长不重复的连续子串
 *** 滑动窗口
-** 判断一个树是否是平衡二叉树
+** [.line-through]#判断一个树是否是平衡二叉树#
 ** 给定一个长度为N的整形数组arr，其中有N个互不相等的自然数1-N，请实现arr的排序，但是不要把下标0∼N−1位置上的数通过直接赋值的方式替换成1∼N
 *** SOS
-** 对于两个字符串, 计算最长公共子串
+** [.line-through]#对于两个字符串, 计算最长公共子串#
 *** 基本思路: 两个字符串构建二维矩阵, 相同的置为1, 不同的置为0
 *** 优化: 两个字符串长短不一, 公共子串肯定不超过较短的字符串, 以它为外循环, 依次匹配长字符串
 *** . 字符串为空情况处理, 长串包含子串特殊情况
@@ -137,7 +138,7 @@
 *** . 匹配时字符不等, table[i][j]都为0
 *** . 只要匹配时字符相等, table[i][j]初始化要么为1, 要么左上角字符匹配结果+1: table[i-1][j-1]
 *** . 最后一起判断如果重复字符数repeatNum小于table[i][j], 那么更改repeatNum和lastIndex
-** 对于一个字符串，计算其中最长回文子串的长度
+** [.line-through]#对于一个字符串，计算其中最长回文子串的长度#
 **** 一般为n^2, 将字符串翻转, 得到两个字符串, 就可以利用两个字符串最长公共子串解决了
 **** Manacher算法可以到n
 ** 从n个元素的无序数组找到最大(最小)k个数
