--- a/doc/GoodBye.adoc
+++ b/doc/GoodBye.adoc
@@ -83,6 +83,7 @@ https://blog.csdn.net/pange1991/article/details/53860651
 ** CountDownLatch
 ** CycleBarrier
 * 线程池
+** 常用线程池的参数及特点
 ** 为什么要用线程池
 ** 线程池是如何复用线程的
 ** 线程池核心参数
@@ -143,7 +144,7 @@ https://blog.csdn.net/pange1991/article/details/53860651
 ** 最长不重复的连续子串
 *** 滑动窗口
 ** [.line-through]#判断一个树是否是平衡二叉树#
-** 给定一个长度为N的整形数组arr，其中有N个互不相等的自然数1-N，请实现arr的排序，但是不要把下标0∼N−1位置上的数通过直接赋值的方式替换成1∼N
+** 给定一个长度为N的整形数组arr，其中有N个互不相等的自然数1~N，请实现arr的排序，但是不要把下标0∼N−1位置上的数通过直接赋值的方式替换成1∼N
 *** SOS
 ** [.line-through]#对于两个字符串, 计算最长公共子串#
 *** 基本思路: 两个字符串构建二维矩阵, 相同的置为1, 不同的置为0
