complete binary search tree traverse test!

--- a/doc/Algorithm.adoc
+++ b/doc/Algorithm.adoc
@@ -15,8 +15,16 @@ v1.0, 2021-04-06
 
 - 排序
 ** 快排
+*** 核心, 分区排序函数, 选定参考值, 首尾与参考值比较, 尾端小值往首端赋值移动, 首端大值往尾端赋值移动
+*** 分区排序函数, 2层while循环, 内层2个while循环, 镜像对称, 最后start就是中轴索引值, 把参考值赋值还原, 返回start就是中轴索引
+*** 中轴索引确定后, 两边区间就是[start, 中轴索引 - 1], [中轴索引 + 1, end]
+*** 递归转栈迭代, 1个栈即可, 因为递归只是改变了区间值, 用栈同样存储即可
 ** 归并
+*** 核心, 区间合并函数, 开辟新数组, 长度为(end - start + 1), 每次把[start, end]之间的排序好就可以
+*** 区间合并函数, 3个变量i=start, j=mid+1, k=0, 在区间[i, mid] && [j, end]中3次while循环, source[i]与source[j]的判断符号(##>##或者##<##)保持一致
 - 二叉树遍历
+** 6种递归, easy
+** 栈迭代, 需要技巧, 总体: stack, while(node != null || !stack.isEmpty), node入栈stack, 前序或反_前序, 收集当前node值, node=node.left
 
 .排序算法.java
 [source,java]
