--- a/doc/GoodBye.adoc
+++ b/doc/GoodBye.adoc
@@ -17,6 +17,11 @@
 - [.line-through]#HBase原理, MySQL和HBase的根本区别和异同点#
 - 每个用户每天首次登陆领红包, 考虑分布式锁: 读写原子性
 - Kafka消费者如何做多线程, 使用线程池注意点, 处理失败该使用什么拒绝策略
+- 需求设计快速迭代与系统稳定性、可拓展性之间的权衡
+- 团队成员情况, 后端开发、前端开发人数、测试人数, 工作经验年限
+- 具体的业务系统, 技术栈体系, 遇到的重难点工作方向
+- 您对我的期望有哪些
+-
 
 
 === 基础搞怪系列
@@ -133,13 +138,14 @@ https://blog.csdn.net/pange1991/article/details/53860651
 *** 要点: 两数相加结果比长串可能多一位
 **** indexA = maxLength - 1, 长串倒着遍历
 **** indexB = indexA + shortB.length(), 短串也倒着遍历, 索引推导
-** 验证二叉搜索树
+** [.line-through]#验证二叉搜索树#
 ** 给你两个非空的链表，表示两个非负的整数。它们每位数字都是按照逆序的方式存储的，并且每个节点只能存储一位数字。请你将两个数相加，并以相同形式返回一个表示和的链表
 *** 参考两字符串相加
 ** [.line-through]#返回一个树的左视图#
 *** 二叉树层次遍历, 队列
 ** 给定一个二叉树, 找到该树中两个指定节点的最近公共祖先
-** 求一个环形链表的环的长度
+** [.line-through]#求一个环形链表的环的长度#
+*** 快慢指针找到第一次相遇点M, 然后快慢指针再走一圈再相遇, 就得到环的长度
 ** [.line-through]#一个环上有10个点,编号为0-9,从0点出发,每步可以顺时针到下一个点,也可以逆时针到上一个点,求:经过n步又回到0点有多少种不同的走法#
 *** 环球旅行, 动态规划table(step)(index) = table(step-1)((index+1+n)%n) + table(step-1)((index-1+n)%n)
 ** 找出所有相加之和为 n 的 k 个数的组合，组合中只允许含有 1 - 9 的正整数，并且每种组合中不存在重复的数字
