--- a/doc/Algorithm.adoc
+++ b/doc/Algorithm.adoc
@@ -43,7 +43,7 @@ import java.util.Stack;
  * TODO: 堆排序、插入排序有一定取巧性质, 可以研究
  * 要点:
  * . 常见快排思路, 中轴分区排序, 选定一个元素作为参考元素, 将小值和大值分到中轴两边, 并且可以原地排序, 特性: 不稳定, 时间最好O(nlog•n), 时间最坏O(n2), 空间O(nlog•n)
- * . JDK内部#Arrays.sort()则是根据一些情况融合多种排序算法, 6P的人总是相似的
+ * . JDK内部#Arrays.sort()则是根据一些情况融合多种排序算法, 6B的人总是相似的
  * . 归并排序思路, 分治后再合并, 将源数据不断拆分, 然后再两两合并排序, 排序过程需要开辟新空间, 特性: 稳定, 时间都是O(nlog•n), 空间O(n)
  * 核心方法:
  * . 快排核心是中轴分区排序方法
